--- a/home.html
+++ b/home.html
@@ -11,15 +11,18 @@
     <div style="text-align: center">
       <h1>Welcome, <span class="name"></span></h1>
       <p>Your Email is: <span class="email"></span></p>
+      <p>Your Id is: <span class="id"></span></p>
     </div>
   </body>
 
   <script>
     let userData = JSON.parse(localStorage.getItem('userData'));
     let name = document.querySelector('.name'),
-      email = document.querySelector('.email');
+      email = document.querySelector('.email'),
+      id = document.querySelector('.id');
 
     email.textContent = `${userData.email}`;
     name.textContent = `${userData.username}`;
+    id.textContent = `${userData.id}`;
   </script>
 </html>
