--- a/register.html
+++ b/register.html
@@ -40,10 +40,12 @@
             <div class="error"></div>
           </div>
           <div class="actions">
-            <button class="register-btn" id="submit" type="submit">
-              Create Account
-            </button>
-            <button class="login-btn" onclick="window.location='./login.html'">
+            <button class="register-btn" id="submit">Create Account</button>
+            <button
+              type="button"
+              class="login-btn"
+              onclick="window.location='./login.html'"
+            >
               I already have an account
             </button>
           </div>
